# fastapi-hexagonal-async

./: .env.exemplo  .gitignore  Dockerfile  EsquemaDetalhado.md  EsquemaSimplificado.md  README.md  app.tree  docker-compose.yml  pyproject.toml
app/: main.py
app/adapters/configuration/: __init__.py  config.py
app/adapters/inbound/: __init__.py
app/adapters/outbound/: __init__.py
app/api/: deps.py
app/api/v1/: router.py
app/application/dtos/: __init__.py  base.py  base_dto.py  base_dtos.py  client_credentials_dto.py  client_dto.py  client_management_dto.py  client_management_schemas.py  client_schemas.py  user_dto.py  user_schemas.py
app/application/ports/: __init__.py  inbound.py  outbound.py
app/application/use_cases/: __init__.py  auth_use_cases.py  (+3 more)
app/core/: __init__.py  config.py  database.py  exceptions.py
app/crud/: __init__.py  base.py  client_crud.py  user_crud.py
app/db/: __init__.py
app/domain/: __init__.py  exceptions.py
app/schemas/: base.py  client_management_schemas.py  client_schemas.py  user_schemas.py
app/security/: auth_client_manager.py  auth_user_manager.py  permissions.py  token_gerar.py  token_store.py
app/services/: __init__.py  base_service.py  client_service.py  user_service.py
app/templates/: create_client_jwt.html  create_client_url.html  update_client_url.html
app/test/: conftest.py
app/utils/: email_validation.py  input_validation.py  pagination.py
docs/: a_python.txt  architecture.md  b_poetry.txt  c_docker.txt  d_migrations.txt  e_postgres.txt  f_client_jwt.txt  g_tree.txt
migrations/: env.py
(+94 files in other folders)
